# memorization-nucleus-sampling

./: Figures.ipynb  README.md  Untitled.ipynb  makefile  pyproject.toml  requirements.txt
memorization/: __main__.py
memorization/cli/: __init__.py  evaluate.py  run_experiments.py  sample.py  train.py  version.py
memorization/configs/: gpt2.py  lstm.py  transformer.py
memorization/core/: dataset.py  evaluate.py  globals.py  running_experiments.py  sampling.py  training.py
memorization/dataset/stats/: print_results.py  print_results_1a.py  print_results_1b.py  print_results_1c.py  print_results_2b.py  print_stats.py
memorization/helper_scripts/: check_for_coherence.py  get_word_probs.py  helpers.py  visualize_8_word_probabilities.py  visualize_entropy.py
memorization/models/: transformer.py
tests/: test_dummy.py
