[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "memorization"
version = "0.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
	"setuptools==63.1.0",
	"build==0.8.0",
	"pytest==7.1.2",
]

[project.scripts]
memorization = "memorization.__main__:main"


[tool.setuptools.packages.find]
exclude = ["tests*"]
